--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <header class="header">
-    <div class="header__container-1">
-      <div class="logo__container">
+    <div class="container-1">
+      <div class="container-1__logo">
          <h1 class="logo">Cakee</h1>
       </div>
        <nav class="nav">
@@ -26,23 +26,23 @@
          </ul>
        </nav>
      </div>
-     <div class="header__container-2">
-        <h2 class="title">Fresh Life</h2>
-        <p class="header__text">Lorem ipsum dolor sit amet
+     <div class="container-2">
+        <h2 class="container-2__title">Fresh Life</h2>
+        <p class="container-2__text">Lorem ipsum dolor sit amet
           consectetur, adipisicing elit.
            e incidunt mollitia commodi lit.
             Deserunt, sit repellat.
         </p>
-        <div class="header__button">
+        <div class="container-2__button">
            <a href="http://" target="_blank" rel="noopener noreferrer">GET FREE NOW</a>
         </div>
      </div>
   </header>
   <main class="main">
-    <section class="main__container">
-        <img class="main__img" src="./img/img21.png" alt="">
-        <div class="main__text">
-          <h2 class="title">About Us</h2>
+    <section class="container-3">
+        <img class="container-3__img" src="./img/img21.png" alt="">
+        <div class="container-3__text">
+          <h2 class="container-3__title">About Us</h2>
           <p>Lorem ipsum dolor
              sit amet consectetur
              adipisicing elit.
